color code changes

--- a/assets/css/templatemo-digimedia-v2.css
+++ b/assets/css/templatemo-digimedia-v2.css
@@ -127,7 +127,7 @@ p {
   font-size: 15px;
   line-height: 30px;
   font-weight: 300;
-  color: #afafaf;
+  color: Black;
 }
 
 img {
@@ -248,7 +248,7 @@ header
 }
 
 .pre-header ul.info li a {
-  color: #afafaf;
+  color: Black;
   font-size: 14px;
   transition: all .3s;
 }
@@ -271,7 +271,7 @@ header
 }
 
 .pre-header ul.social-media li a {
-  background-color: #afafaf;
+  background-color: Black;
   color: #fff;
   display: inline-block;
   width: 30px;
@@ -1076,7 +1076,7 @@ About Style
 .progress .progress-value span {
   font-size: 18px;
   text-transform: none;
-  color: #afafaf;
+  color: Black;
   font-weight: 300;
 }
 
@@ -1434,7 +1434,7 @@ Free Quote
   width: 100%;
   margin-top: 20px;
   margin-left: 30px;
-  color: #afafaf;
+  color: Black;
   font-weight: 400;
   font-size: 15px;
   height: 40px;
@@ -1554,7 +1554,7 @@ Portfolio
 
 .portfolio-item .down-content span {
   font-size: 15px;
-  color: #afafaf;
+  color: Black;
   transition: all .3s;
 }
 
@@ -1654,7 +1654,7 @@ Blog
 
 .blog-post .down-content span.date {
   font-size: 15px;
-  color: #afafaf;
+  color: Black;
   text-align: right;
   float: right;
   margin-top: 4px;
@@ -1727,7 +1727,7 @@ Blog
 
 .post-item .right-content span.date {
   font-size: 15px;
-  color: #afafaf;
+  color: Black;
   text-align: right;
   float: right;
   margin-top: 4px;
