--- a/assets/css/templatemo-digimedia-v2.css
+++ b/assets/css/templatemo-digimedia-v2.css
@@ -902,7 +902,7 @@ Banner Style
 
 .main-banner:before {
   content: '';
-  background-image: url(../images/slider-right-dec.jpg);
+  /* background-image: url(../images/slider-right-dec.jpg); */
   background-repeat: no-repeat;
   position: absolute;
   right: 0;
